alteração no titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>iPhone - css</title>
+    <title>iPhone 16 - css</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
                 <span id="roxo"></span>
             </div>
         </div>
-        <img src="./img/iphone-preto.png" class="img-iphone" alt="Imagem do iPhone" id="phone">
+        <img src="./img/iphone-vemelho.png" class="img-iphone" alt="Imagem do iPhone" id="phone">
     </main>
 </body>
 
