--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <span id="roxo" onclick="imgSlide('img/iphone-roxo.png'); circleChange('#8A2BE2')"></span>
             </div>
         </div>
-        <img src="./img/iphone-preto.png" class="img-iphone" alt="Imagem do iPhone" id="phone">
+        <img src="./img/iphone-roxo.png" class="img-iphone" alt="Imagem do iPhone" id="phone">
     </main>
 
     <script type="text/javascript">
