--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>iPhone 16 - css</title>
+    <title>iPhone 15 - css</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     <main>
         <div class="circle"></div>
         <div class="div-principal">
-            <img src="./img/iphone-16-logo-png_.png" alt="" class="logo-16">
+            <img src="./img/logo iphone 15.png" alt="" class="logo-16">
             <h3>Tão poderoso.
                 Tão ao seu alcance.
             </h3>
